tests/ui/traits/const-traits/ice-126148-failed-to-normalize.stderr
error: const `impl` for trait `FromResidual` which is not marked with `#[const_trait]`
  --> $DIR/ice-126148-failed-to-normalize.rs:8:12
   |
LL | impl const FromResidual<Error> for TryMe {}
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0046]: not all trait items implemented, missing: `from_residual`
  --> $DIR/ice-126148-failed-to-normalize.rs:8:1
   |
LL | impl const FromResidual<Error> for TryMe {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `from_residual` in implementation
   |
   = help: implement the missing item: `fn from_residual(_: Error) -> Self { todo!() }`

error: const `impl` for trait `Try` which is not marked with `#[const_trait]`
  --> $DIR/ice-126148-failed-to-normalize.rs:12:12
   |
LL | impl const Try for TryMe {
   |            ^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0046]: not all trait items implemented, missing: `from_output`, `branch`
  --> $DIR/ice-126148-failed-to-normalize.rs:12:1
   |
LL | impl const Try for TryMe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ missing `from_output`, `branch` in implementation
   |
   = help: implement the missing item: `fn from_output(_: <Self as Try>::Output) -> Self { todo!() }`
   = help: implement the missing item: `fn branch(self) -> ControlFlow<<Self as Try>::Residual, <Self as Try>::Output> { todo!() }`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0046`.
